Add comment of colors to top of css file

--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@ Text Domain: vectorgen
 @import url('https://fonts.googleapis.com/css?family=Lato:700|Open+Sans:400,400i');
 @import url("stylesheets/normalize.css");
 @import url("stylesheets/skeleton.css");
+
+/* Colors:
+Blue: #174A7F
+Light Gray: #174A7F
+Teal: #40B2B1
+Charcoal: #383E4B
+White: #F4FAFE
+*/
