Remove bullets from nav for real

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ header{
 header a{
   color: #383E4B;
   text-decoration: none;
-  list-style-type: none;
 }
 
 footer{
@@ -54,5 +53,8 @@ footer{
 footer a{
   color: #f4fafe;
   text-decoration: none;
+}
+
+header ul, footer ul{
   list-style-type: none;
 }
