Testing flexbox on header

--- a/style.css
+++ b/style.css
@@ -81,3 +81,9 @@ header .logo{
   max-width: 100px;
   height: auto;
 }
+
+.center-header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
