Testing flexbox on header via video

--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ header .logo{
   height: auto;
 }
 
-.center-header{
+header .row{
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
