Update blog page

--- a/style.css
+++ b/style.css
@@ -89,3 +89,37 @@ header .row{
   justify-content: center;
   align-items: center;
 }
+
+/* Blog Page */
+
+
+/* Blog Post */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
