--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ header ul{
   float: right;
 }
 
+ul#menu-header-nav li {
+    display: inline;
+    padding: 0 20px;
+}
+
 /* ul {
   margin-top: 2rem;
 }
