--- a/style.css
+++ b/style.css
@@ -100,6 +100,13 @@ footer{
 footer a{
   color: #f4fafe;
   text-decoration: none;
+  font-weight: 700;
+}
+
+ul#menu-footer-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 header ul li, footer ul li{
