Add hover style to contact button

--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ ul#menu-header-nav li:last-child a {
   border-radius: 5px;
 }
 
+ul#menu-header-nav li:last-child a:hover {
+    background-color: #174A7F;
+}
+
 .header-image a {
   display: flex;
   align-items: center;
