--- a/style.css
+++ b/style.css
@@ -101,10 +101,20 @@ footer{
   color: #F4FAFE;
 }
 
+footer p{
+  color: #F4FAFE;
+  display: flex;
+}
+
 footer a{
   color: #f4fafe;
   text-decoration: none;
   font-weight: 700;
+}
+
+footer .row{
+  display: flex;
+  flex-direction: column;
 }
 
 ul#menu-footer-nav {
