--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ body{
   color: #383E4B;
 }
 
+.row{
+  display: flex;
+  justify-content: center;
+}
+
 h1, h2, h3, h4, h5{
   font-family: 'Lato', sans-serif;
   color: #174A7F;
