--- a/style.css
+++ b/style.css
@@ -25,11 +25,6 @@ body{
   color: #383E4B;
 }
 
-.row{
-  display: flex;
-  justify-content: center;
-}
-
 h1, h2, h3, h4, h5{
   font-family: 'Lato', sans-serif;
   color: #174A7F;
@@ -162,4 +157,9 @@ header ul li, footer ul li{
 
 .collaborators {
   padding-bottom: 50px;
+}
+
+.contact-page{
+  display: flex;
+  justify-content: center;
 }
