--- a/style.css
+++ b/style.css
@@ -166,6 +166,10 @@ header ul li, footer ul li{
     color: #fff;
 }
 
+.contact-us{
+  padding: 20px 0 30px 0;
+}
+
 .collaborators {
-  padding-bottom: 50px;
+    padding: 20px 0 50px 0;
 }
