--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ header ul li, footer ul li{
   padding-bottom: 10px;
 }
 
-h3 a{
+h3{
   color: #383E4B;
   font-size: 3rem;
   text-decoration: none;
