blog title style

--- a/style.css
+++ b/style.css
@@ -37,9 +37,6 @@ p{
 
 a{
   font-family: 'Open Sans', sans-serif;
-  color: #383E4B;
-  font-size: 3rem;
-  text-decoration: none;
 }
 
 a:hover{
@@ -152,6 +149,13 @@ header ul li, footer ul li{
   margin-left: 12px;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.blog-title{
+  color: #383E4B;
+  font-size: 3rem;
+  text-decoration: none;
+
 }
 
 
