--- a/style.css
+++ b/style.css
@@ -179,6 +179,10 @@ p.p{
   margin-top: 0px;
 }
 
+img.attachment-medium.size-medium.wp-post-image {
+  border: 1px solid gray;
+}
+
 /* Blog Post */
 
 /* Contact Page */
