--- a/style.css
+++ b/style.css
@@ -180,8 +180,38 @@ p.p{
 }
 
 img.attachment-medium.size-medium.wp-post-image {
-  border: 1px solid gray;
-}
+  border: 1px solid #dedddd;
+    position: relative;
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    -webkit-box-shadow: rgba(0,0,0,.2) 3px 5px 5px;
+    -moz-box-shadow: rgba(0,0,0,.2) 3px 5px 5px;
+    box-shadow: rgba(0,0,0,.2) 3px 5px 5px;
+  }
+  
+img.attachment-medium.size-medium.wp-post-image:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,255,255, 0.5);
+    -moz-transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear;
+  }
+  
+img.attachment-medium.size-medium.wp-post-image:hover:before {
+    background: none;
+  }
+
+
 
 /* Blog Post */
 
