--- a/style.css
+++ b/style.css
@@ -185,6 +185,10 @@ img.attachment-medium.size-medium.wp-post-image {
 
 img.attachment-medium.size-medium.wp-post-image:hover {
   opacity: 0.5;
+  background: rgba(39,62,84,0.82);
+    overflow: hidden;
+    height: 100%;
+    z-index: 2;
   }  
 
 
