--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ header ul li, footer ul li{
 }
 
 /* Blog Page */
-h1.blog.invest {
+h1.blog {
     text-align: center;
     margin-top: 42px;
     margin-bottom: 0px;
