--- a/style.css
+++ b/style.css
@@ -147,7 +147,9 @@ h5.invest {
     margin-top: 42px;
     margin-bottom: 0px;
     font-weight: bold;
+    font-size: 4rem;
 }
+
 
 
 /* Blog Page */
