--- a/style.css
+++ b/style.css
@@ -143,7 +143,18 @@ header ul li, footer ul li{
 .hero {
     position: relative;
     text-align: center;
-    color: white;
+  }
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.center {
+  margin: auto;
+  text-align: center;
 }
 
 /* Learn More */
