--- a/style.css
+++ b/style.css
@@ -139,6 +139,10 @@ header ul li, footer ul li{
   background-color: #c7d6e0;
 }
 
+.home-block{
+  padding: 20px 0 50px 0;
+}
+
 .hero {
     position: relative;
     text-align: center;
@@ -218,7 +222,7 @@ img.attachment-medium.size-medium.wp-post-image {
 
 img.attachment-medium.size-medium.wp-post-image:hover {
   opacity: 0.5;
-  }  
+  }
 
 
 /* Blog Post */
