Add more our plan widgets and css

--- a/style.css
+++ b/style.css
@@ -287,4 +287,13 @@ p.p.l {
   background-color: #383E4B;
 }
 
+.our-plan-stage1-text {
+  color: #fff;
+}
+
+.stage2 {
+  background-color: #c7d6e0;
+}
+
+
 
