Fix missing comma that drove me insane

--- a/style.css
+++ b/style.css
@@ -279,12 +279,12 @@ p.p.l {
 /* OUR PLAN SECTION */
 
 .ourplan {
-  color: #fff;
+  color: #F4FAFE;
 }
 
 .stage1_container {
   background-color: #383E4B;
-  color: #fff;
+  color: #F4FAFE;
 }
 
 .stage2_container {
