Add more css to our plan text sections

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ p.p.l {
 
 /* OUR PLAN SECTION */
 
-.ourplan {
+.our-plan {
   color: #F4FAFE;
 }
 
@@ -297,7 +297,7 @@ p.p.l {
 }
 
 .stage1-text {
-  color: #fff;
+  color: #F4FAFE;
 }
 
 .our-plan-stage1-text {
