--- a/style.css
+++ b/style.css
@@ -288,6 +288,10 @@ p.p.l {
     color: #fff;
 }
 
+input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, textarea:focus {
+    border-color: #40B2B1;
+}
+
 .contact-us{
   padding: 20px 0 30px 0;
 }
