--- a/style.css
+++ b/style.css
@@ -416,3 +416,8 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   right: 40px;
   top: 0px;
 }
+
+.about-page {
+  padding: 30px 0px 30px 0px;
+  font-size: 1.5em;
+}
