--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ header ul li, footer ul li{
 
 /* Learn More */
 
-h3.invest {
+h3 {
     text-align: center;
     margin-top: 42px;
     margin-bottom: 0px;
