--- a/style.css
+++ b/style.css
@@ -175,6 +175,11 @@ h5.widget-title {
     margin-bottom: 10px;
 }
 
+.iv-color{
+  background-color: #c7d6e0;
+  padding: 30px;
+
+}
 
 
 /* Blog Page */
