--- a/style.css
+++ b/style.css
@@ -177,6 +177,16 @@ h5.widget-title {
 
 .iv-color{
   background-color: #c7d6e0;
+
+}
+
+.money-color{
+  background-color: #c7d6e0;
+
+}
+
+.bu-color{
+  background-color: #383E4B;
   padding: 30px;
 
 }
