--- a/style.css
+++ b/style.css
@@ -449,3 +449,32 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   padding: 30px 0px 30px 0px;
   font-size: 1.5em;
 }
+
+
+/* MEDIA QUERIES (HEADER_NAV) */
+
+@media (min-width: 1174px) {
+  .navvv{
+    display: none;
+  }
+
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
