--- a/style.css
+++ b/style.css
@@ -453,7 +453,7 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
 
 /* MEDIA QUERIES (HEADER_NAV) */
 
-@media (max-width: 1174px) {
+@media (min-width: 1174px) {
   .navvv{
     display: none;
   }
