temporary color change

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ h5.widget-title {
 }
 
 .bu-color{
-  background-color: #383E4B;
+  background-color: #40B2B1;
   padding-top: 50px;
   padding-bottom: 50px;
 
