--- a/style.css
+++ b/style.css
@@ -457,9 +457,9 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   font-size: 1.5em;
 }
 
-.wpsm_counterbox {
-  margin-top: 0;
-  margin-bottom: 0;
+.wpsm_number .wpsm_count-title { 
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
 }
 
 /* MEDIA QUERIES (HEADER_NAV) */
