--- a/style.css
+++ b/style.css
@@ -474,7 +474,7 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
 
 /* MEDIA QUERIES (HEADER_NAV) */
 
-*@media (max-width: 1174px) {
+@media (max-width: 1174px) {
   .navvv{
     display: none;
   }
