--- a/style.css
+++ b/style.css
@@ -496,6 +496,12 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   top: 0px;
 }
 
+.hero-image-text {
+  float: right;
+  background-color: #F4FAFE;
+  text-align: center;
+}
+
 .about-page {
   padding: 30px 0px 30px 0px;
   font-size: 1.5em;
