--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   top: 0px;
 }
 
-.hero-image-text {
+.hero-image-about-text {
   float: right;
   background-color: #F4FAFE;
   text-align: center;
