--- a/style.css
+++ b/style.css
@@ -502,6 +502,13 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   text-align: center;
 }
 
+.right {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+}
+
 .about-page {
   padding: 30px 0px 30px 0px;
   font-size: 1.5em;
