--- a/style.css
+++ b/style.css
@@ -475,7 +475,7 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   height: 0;
   border-left: 25px solid transparent;
   border-right: 25px solid transparent;
-  border-top: 50px solid #F4FAFE;
+  border-top: 50px solid #174A7F;
 }
 
 .arrow-container-2 {
