--- a/style.css
+++ b/style.css
@@ -501,10 +501,11 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   float: right;
   background-color: #F4FAFE;
   text-align: center;
+  padding: 20px;
 }
 
 .about-text-title {
-  margin: 20px;
+  padding: 20px;
 }
 
 .right {
@@ -512,6 +513,7 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   top: 50%;
   left: 80%;
   transform: translate(-50%, -50%);
+  padding: 20px;
 }
 
 .about-page {
