--- a/style.css
+++ b/style.css
@@ -558,9 +558,9 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   }
   .top {
     margin-top: 81px;
-}
+  }
 
-  } 
+} 
 
 
 
@@ -572,10 +572,37 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
   }
 
 
-  } 
+} 
 
 
+ @media (max-width: 1035px) {
 
+  .one-third.column.posts {
+    margin-left: 70px;
+    margin-right: 70px;
+  }
+
+
+} 
+
+ @media (max-width: 906px) {
+
+  .one-third.column.posts {
+    margin-left: 65px;
+    margin-right: 65px;
+  }
+
+
+} 
+
+ @media (max-width: 841px) {
+
+  .one-third.column.posts {
+    margin-left: 21px;
+    margin-right: 107px;
+  }
+
+} 
 
 
 
