--- a/style.css
+++ b/style.css
@@ -643,5 +643,42 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
 
 } 
 
+ @media (max-width: 549px) {
 
+  img.attachment-medium.size-medium.wp-post-image {
+    width: 80%;
+    height: auto;
+  }
+  .one-third.column.posts {
+    margin-left: 43px;
+  }
+
+} 
+
+ @media (max-width: 425px) {
+
+  .one-third.column.posts {
+    margin-left: 35px;
+  }
+
+} 
+
+
+ @media (max-width: 375px) {
+
+  .one-third.column.posts {
+    margin-left: 25px;
+  }
+
+} 
+
+
+
+ @media (max-width: 320px) {
+
+  .one-third.column.posts {
+    margin-left: 14px;
+  }
+
+} 
 
